--- a/app/src/main/res/layout/alarm_list_item.xml
+++ b/app/src/main/res/layout/alarm_list_item.xml
@@ -1,64 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    style="@style/AlertCardViewStyle"
-    android:layout_marginBottom="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
+    android:layout_margin="16dp"
     android:clickable="true">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/alarmItemActivatedSwitch"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        >
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:visibility="gone"
+        />
 
-        <android.support.v7.widget.SwitchCompat
-            android:id="@+id/alarmItemActivatedSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            android:visibility="gone"
-            />
+    <TextView
+        android:id="@+id/alarmItemLabelText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextLarge.AlarmItemLabel"
+        android:layout_marginTop="8dp"
+        tool:text="Title adasdadada dadada dadadadada dadadad"
+        />
 
-        <TextView
-            android:id="@+id/alarmItemLabelText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/TextLarge.AlarmItemLabel"
-            android:layout_marginTop="8dp"
-            tool:text="Title adasdadada dadada dadadadada dadadad"
-            />
+    <TextView
+        android:id="@+id/alarmItemRelativeTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/alarmItemLabelText"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_alignParentStart="true"
+        style="@style/TextLarge.AlarmItemRelativeTime"
+        tool:text="in 1 seconds asdasdasdsdsdssdsdsd sdsd"
+        android:layout_toStartOf="@id/alarmItemActivatedSwitch"
+        />
 
-        <TextView
-            android:id="@+id/alarmItemRelativeTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/alarmItemLabelText"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_alignParentStart="true"
-            style="@style/TextLarge.AlarmItemRelativeTime"
-            tool:text="in 1 seconds asdasdasdsdsdssdsdsd sdsd"
-            android:layout_toStartOf="@id/alarmItemActivatedSwitch"
-            />
+    <TextView
+        android:id="@+id/alarmItemTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/alarmItemRelativeTime"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        style="@style/TextSmall.AlarmItemTime"
+        tool:text="Fri 18:00"
+        />
 
-        <TextView
-            android:id="@+id/alarmItemTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/alarmItemRelativeTime"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            style="@style/TextSmall.AlarmItemTime"
-            tool:text="Fri 18:00"
-            />
-
-    </RelativeLayout>
-
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
