--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <!--<color name="colorPrimaryDark">#000000</color>-->
     <!--<color name="colorPrimaryDarker">#000000</color>-->
 
-    <color name="colorPrimary">#eceff1</color>
+    <color name="colorPrimary">#fafafa</color>
     <color name="colorPrimaryLessDark">#f5f5f5</color>
     <color name="colorPrimaryDark">#e0e0e0</color>
     <color name="colorPrimaryDarker">#bdbdbd</color>
@@ -35,7 +35,7 @@
     <!--<color name="textSecondary">@color/colorPrimary</color>-->
     <color name="textSecondary">#bdbdbd</color>
 
-    <color name="windowBackground">#eceff1</color>
+    <color name="windowBackground">#fdfdfd</color>
     <color name="cardBackground">#FFF</color>
 
     <color name="bottomNavigationBackground">@color/colorPrimaryDarker</color>
